--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vee-validate": "^3.4.10",
         "vue-axios": "^3.2.4",
         "vue-excel-export": "^0.1.3",
+        "vue-excel-xlsx": "^1.0.11",
         "vue-json-excel": "^0.3.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.1",
